refactor: StreamAPIを修正